[package]
name = "idp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
derive_builder = "0.20.2"
fred = "10.1.0"
secrecy = "0.10.3"
totp-rs = "5.7.0"
subtle = "2.6.1"
base64 = "0.22.1"
rmp-serde = "1.3.0"
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
